[package]
name = "kml_wasm"
version = "0.1.0"
edition = "2021"
description = "Kernel ML (KML) parser compiled to WASM"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "compile_kml"
path = "src/bin/compile_kml.rs"

[features]
default = []

[dependencies]
wasm-bindgen = "0.2"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
